# src/routes/Troller.route.ts
@@ -1,29 +1,11 @@
-import {
-  Router,
-  Request,
-  Response,
-  NextFunction,
-  request,
-  response,
-} from 'express';
-import {
-  createQueryBuilder,
-  getConnection,
-  getCustomRepository,
-  getManager,
-  getRepository,
-  IsNull,
-} from 'typeorm';
-// import Client from '../models/Client';
-import OrderItem from '../models/OrderItem';
-import Product from '../models/Product';
+import { Router, Request, Response, NextFunction } from 'express';
+import { getCustomRepository, getRepository } from 'typeorm';
+import { linkWhats } from '../functions/Whatsapp';
 import Troller from '../models/Troller';
 import User from '../models/User';
 import TrollerRepository from '../repositories/Troller.repository';
 import CreateOrderItensService from '../services/OrderItens.service';
-
 import CreateTrollerService from '../services/Troller.service';
-// import { getAllTrollers, getTrollerActive } from './User.route';
 
 const routes = Router();
 
@@ -51,45 +33,111 @@ routes.post('/', async (request, response) => {
   }
 });
 
+routes.post('/buy/:id', async (request, response) => {
+  try {
+    const { id } = request.params;
+    // const paymentInfo = request.body as Payment;
+    const paymentInfo = request.body;
+
+    const trollerRepository = getCustomRepository(TrollerRepository);
+
+    const troller = await trollerRepository.findOne({
+      where: { id },
+    });
+
+    if (!troller) {
+      return response
+        .status(401)
+        .json({ error: `Troller id ${id} not finded.` });
+    }
+
+    const userRepository = getRepository(User);
+
+    const idFair = troller.fair.id;
+    console.log('fairId');
+    console.log(idFair);
+
+    const sellers = await userRepository.find({
+      where: { fair: { id: idFair } },
+    });
+
+    troller.sellers = sellers;
+    troller.active = false;
+
+    await trollerRepository.save(troller);
+
+    const newTroller = await trollerRepository.findOne({
+      where: { id },
+    });
+    console.log(newTroller);
+
+    return response.json(newTroller);
+  } catch (err) {
+    // log erro
+    console.error(err);
+    return response.status(400).json({ error: err.message });
+  }
+});
+
 routes.get('/empty', async (_request, response) => {
   try {
     const trollerRepository = getRepository(Troller);
 
-    const emptyTroller = await trollerRepository
-      .createQueryBuilder('troller')
-      .leftJoinAndSelect('troller.user', 'user')
-      .leftJoinAndSelect('troller.fair', 'fair')
-      .leftJoinAndSelect('troller.orderItens', 'orderItem')
-      .leftJoinAndSelect('orderItem.product', 'product')
-      .where('troller.active = :active', { active: true })
-      .andWhere('troller.userId is null')
-      .getOne();
-    // const emptyTroller = await trollerRepository.findOne({
-    //   where: { user: { id: null } },
-    // });
+    const troller = await trollerRepository.findOne({
+      where: { user: { id: null }, active: true },
+    });
 
-    if (!emptyTroller) {
+    if (!troller) {
       const trollerService = new CreateTrollerService();
 
-      const troller = await trollerService.execute({});
+      const createTroller = await trollerService.execute({});
 
-      const emptyTroller = await trollerRepository
-        .createQueryBuilder('troller')
-        .leftJoinAndSelect('troller.user', 'user')
-        .leftJoinAndSelect('troller.fair', 'fair')
-        .leftJoinAndSelect('troller.orderItens', 'orderItem')
-        .leftJoinAndSelect('orderItem.product', 'product')
-        .where('troller.id = :id', { id: troller.id })
-        .getOne();
+      const newTroller = await trollerRepository.findOne({
+        id: createTroller.id,
+      });
 
-      return response.json(emptyTroller);
+      return response.json(newTroller);
     }
 
-    return response.json(emptyTroller);
+    return response.json(troller);
   } catch (error) {}
 });
 
+routes.get('/user/:id/active', async (request, response) => {
+  try {
+    const { id } = request.params;
+
+    const trollerRepository = getRepository(Troller);
+
+    const troller = await trollerRepository.findOne({
+      where: { user: { id }, active: true },
+    });
+
+    // create one if anyone was found
+
+    return response.json(troller);
+  } catch (err) {
+    console.error(err);
+    return response.status(400).json({ error: err.message });
+  }
+});
+
 routes.get('/:id', async (request, response) => {
+  try {
+    const { id } = request.params;
+
+    const trollerRepository = getRepository(Troller);
+
+    const troller = await trollerRepository.findOne({ id });
+
+    return response.json(troller);
+  } catch (err) {
+    console.error(err);
+    return response.status(400).json({ error: err.message });
+  }
+});
+
+routes.get('/user/:id/all', async (request, response) => {
   try {
     const { id } = request.params;
 
@@ -101,9 +149,8 @@ routes.get('/:id', async (request, response) => {
       .leftJoinAndSelect('troller.fair', 'fair')
       .leftJoinAndSelect('troller.orderItens', 'orderItem')
       .leftJoinAndSelect('orderItem.product', 'product')
-      .where('troller.active = :active', { active: true })
-      .andWhere('troller.userId = :id', { id: id })
-      .getOne();
+      .where('troller.userId = :id', { id: id })
+      .getMany();
 
     return response.json(troller);
   } catch (err) {
@@ -117,7 +164,6 @@ routes.put('/:id', async (request, response) => {
     const { id } = request.params;
     const { orderItens, fair, user } = request.body as Troller;
 
-    const orderItemService = new CreateOrderItensService();
     const trollerRepository = getCustomRepository(TrollerRepository);
 
     const findedTroller = await trollerRepository.findOne({ where: { id } });
@@ -128,7 +174,9 @@ routes.put('/:id', async (request, response) => {
         .json({ error: `Troller id ${id} not finded.` });
     }
 
-    if (orderItens !== undefined && orderItens.length > 0) {
+    const orderItemService = new CreateOrderItensService();
+
+    if (!!orderItens && orderItens.length > 0) {
       for (const orderItem of orderItens) {
         await orderItemService.execute({
           ...orderItem,
