# swagger.json
@@ -601,6 +601,25 @@
         "responses": {}
       }
     },
+    "/api/troller/user/{id}/active": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
     "/api/troller/{id}": {
       "get": {
         "tags": [],
@@ -638,6 +657,9 @@
                 "orderItens": {
                   "example": "any"
                 },
+                "fair": {
+                  "example": "any"
+                },
                 "user": {
                   "example": "any"
                 }
@@ -666,6 +688,25 @@
           "204": {
             "description": "No Content"
           },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/api/troller/user/{id}/all": {
+      "get": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
           "400": {
             "description": "Bad Request"
           }
